--- a/Pertemuan_4_Contoh_Kasus_Microcredential.ipynb
+++ b/Pertemuan_4_Contoh_Kasus_Microcredential.ipynb
@@ -61,7 +61,7 @@
       "source": [
         "#@markdown keterangan"
       ],
-      "execution_count": 17,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -80,12 +80,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xw-stdz3bBMm",
-        "outputId": "f8bad7bb-02b8-4ac3-8338-277dfd1b3feb"
+        "outputId": "cad36945-3ca1-47e5-f337-0b87d56a19ca"
       },
       "source": [
         "print(\"Hello world!\")   # mode skrip"
       ],
-      "execution_count": 1,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
       "source": [
         "height = 1.84"
       ],
-      "execution_count": 2,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
       "source": [
         "tall = True"
       ],
-      "execution_count": 3,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
       "source": [
         "height1 = 1.84"
       ],
-      "execution_count": 4,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
       "source": [
         "height2 = 1.79"
       ],
-      "execution_count": 5,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -148,7 +148,7 @@
       "source": [
         "height3 = 1.82"
       ],
-      "execution_count": 6,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
       "source": [
         "height4 = 1.90"
       ],
-      "execution_count": 7,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -181,12 +181,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PW8I5rRubBNd",
-        "outputId": "b5751a76-bbad-442c-ff56-0f96fb23bd1c"
+        "outputId": "ab3125cf-f9b1-4b00-a87d-edcd663b1f3c"
       },
       "source": [
         "[1.84, 1.79, 1.82, 1.90, 1.80]\n"
       ],
-      "execution_count": 8,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +196,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 83
         }
       ]
     },
@@ -208,7 +208,7 @@
       "source": [
         "height = [1.84, 1.79, 1.82, 1.90, 1.80]"
       ],
-      "execution_count": 9,
+      "execution_count": 84,
       "outputs": []
     },
     {
@@ -218,12 +218,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n_SQa_lYbBNf",
-        "outputId": "9a2ab3e5-7bfa-4bf3-dd38-f11ff2485c1b"
+        "outputId": "4d73cf39-2633-47ac-f159-cd4c318f3f37"
       },
       "source": [
         "height"
       ],
-      "execution_count": 10,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -233,7 +233,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 85
         }
       ]
     },
@@ -245,7 +245,7 @@
       "source": [
         "famz = [\"Abe\", 1.84, \"Beb\", 1.79, \"Cory\", 1.82, \"Dad\", 1.90]\n"
       ],
-      "execution_count": 11,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -255,12 +255,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bzCJAoaubBNh",
-        "outputId": "42081466-a5cb-4f9c-f6b2-01029b7b2bc8"
+        "outputId": "30ff675f-769b-4550-b568-1b3bf4ef9c43"
       },
       "source": [
         "famz"
       ],
-      "execution_count": 12,
+      "execution_count": 87,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,7 +270,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 87
         }
       ]
     },
@@ -282,7 +282,7 @@
       "source": [
         "weight = [66.5, 60.3, 64.7, 89.5, 69.8] "
       ],
-      "execution_count": 27,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -292,12 +292,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jy4LKRkubBNk",
-        "outputId": "9fdffb9b-b596-4c78-90ac-38c805e3db50"
+        "outputId": "e44a8ac4-2206-40ee-b519-7f870231f297"
       },
       "source": [
         "weight"
       ],
-      "execution_count": 14,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -307,20 +307,33 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 89
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "03Aj8kuvbBNl"
+        "id": "03Aj8kuvbBNl",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eab9d87d-46b7-46f0-ecb6-9705a6fbc7f0"
       },
       "source": [
-        "weight / height ** 2 "
+        "try :weight / height ** 2 \n",
+        "except :print(\"hasilnya error\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hasilnya error\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -344,7 +357,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 18,
+      "execution_count": 91,
       "outputs": []
     },
     {
@@ -355,7 +368,7 @@
       "source": [
         "np_height = np.array(height)"
       ],
-      "execution_count": 19,
+      "execution_count": 92,
       "outputs": []
     },
     {
@@ -365,12 +378,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o1OlimKVbBNs",
-        "outputId": "22764b12-8358-4770-86a1-94cd85f0392d"
+        "outputId": "e174bac4-519e-433d-e7f0-23a5a0a44d50"
       },
       "source": [
         "np_height "
       ],
-      "execution_count": 20,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -380,7 +393,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 93
         }
       ]
     },
@@ -392,7 +405,7 @@
       "source": [
         "np_weight = np.array(weight)"
       ],
-      "execution_count": 28,
+      "execution_count": 94,
       "outputs": []
     },
     {
@@ -402,12 +415,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kxSKKdKQbBNt",
-        "outputId": "872792e4-761b-4a88-93ce-b9f81ab6db2d"
+        "outputId": "f30e6933-438a-470a-e12a-2c7b4a8eafed"
       },
       "source": [
         "np_weight"
       ],
-      "execution_count": 29,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -417,7 +430,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 95
         }
       ]
     },
@@ -430,7 +443,7 @@
         "#@markdown tiap value akan dioperasikan satu persatu\n",
         "bmi = np_weight / np_height ** 2"
       ],
-      "execution_count": 31,
+      "execution_count": 96,
       "outputs": []
     },
     {
@@ -440,12 +453,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1vD50WdzbBNu",
-        "outputId": "f344c6fc-a623-4469-f876-cdf0babcec6c"
+        "outputId": "4ce36397-5234-4e24-f27f-c3df37e8edb0"
       },
       "source": [
         "bmi"
       ],
-      "execution_count": 32,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -455,7 +468,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 97
         }
       ]
     },
@@ -475,12 +488,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "akligV2hbBNw",
-        "outputId": "d91532f0-2f41-435d-da1b-96af5b553922"
+        "outputId": "1cee2b95-cc1f-4947-ee75-d8e33ae4abc8"
       },
       "source": [
         "np.add(2,3)"
       ],
-      "execution_count": 37,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +503,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 98
         }
       ]
     },
@@ -502,7 +515,7 @@
       "source": [
         "np_height = np.array([1.84, 1.79, 1.82, 1.9, 1.8])"
       ],
-      "execution_count": 38,
+      "execution_count": 99,
       "outputs": []
     },
     {
@@ -513,7 +526,7 @@
       "source": [
         "np_weight = np.array([66.5, 60.3, 64.7, 89.5, 69.8])"
       ],
-      "execution_count": 39,
+      "execution_count": 100,
       "outputs": []
     },
     {
@@ -523,12 +536,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8CzEDHngbBNx",
-        "outputId": "ed4dc6d2-196c-4c05-e814-4b51cea46f69"
+        "outputId": "cdef30d8-e0ba-4624-9def-f0c95723ef8e"
       },
       "source": [
         "type(np_height)"
       ],
-      "execution_count": 40,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,7 +551,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 101
         }
       ]
     },
@@ -549,12 +562,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MyJ5ESribBN0",
-        "outputId": "2d1bc481-5fed-4de8-d36e-9f4d7f3c1f33"
+        "outputId": "b331f6b4-c54b-4e50-950b-603e4f06b758"
       },
       "source": [
         "type(np_weight)"
       ],
-      "execution_count": 41,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -564,7 +577,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 102
         }
       ]
     },
@@ -576,7 +589,7 @@
       "source": [
         "np_2d = np.array([[1, 2, 3, 4, 5], [6, 7, 8, 9, 10]])"
       ],
-      "execution_count": 42,
+      "execution_count": 103,
       "outputs": []
     },
     {
@@ -586,12 +599,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TlGoGK3nbBN2",
-        "outputId": "fdc42626-1f24-4a42-e0ab-681da6a73485"
+        "outputId": "458f0836-b4b9-49ec-a6fa-f79e67ab9bfb"
       },
       "source": [
         "np_2d"
       ],
-      "execution_count": 43,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -602,7 +615,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 43
+          "execution_count": 104
         }
       ]
     },
@@ -613,12 +626,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2C24MwxfbBN3",
-        "outputId": "c29a7b92-ca58-4cb8-d359-f63754fe37ae"
+        "outputId": "dd205478-25f3-4e2d-f371-5cb842da3f57"
       },
       "source": [
         "np_2d.shape"
       ],
-      "execution_count": 44,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -628,7 +641,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 105
         }
       ]
     },
@@ -667,13 +680,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LOan-QjTbBN8",
-        "outputId": "c4ebe73e-5c9f-4676-cf50-b6c8fdf26e07"
+        "outputId": "426b35bb-8111-4fbe-f0af-9837675c5724"
       },
       "source": [
         "#  series\n",
         "np.array([1, 2, 3, 4, 5])"
       ],
-      "execution_count": 45,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -683,7 +696,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 106
         }
       ]
     },
@@ -694,13 +707,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zx0b1hlnbBN9",
-        "outputId": "d6d79fc3-566e-468e-a646-5dd95a7e2b0f"
+        "outputId": "75cd177f-9810-4ed0-b6a9-aba9bacc1912"
       },
       "source": [
         "# DataFrame\n",
         "np.array([[1, 2], [3, 4]])"
       ],
-      "execution_count": 46,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -711,7 +724,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 46
+          "execution_count": 107
         }
       ]
     },
@@ -723,7 +736,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 47,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -732,9 +745,9 @@
         "id": "u7aElZbubBN-"
       },
       "source": [
-        "Tab = pd.read_csv(\"https://raw.githubusercontent.com/Ahmad20/AssociateDataScience2021/main/Tab.csv?token=AKWVZSQME4SCVM5TSFB3TLLBRMQOM\")"
+        "Tab = pd.read_csv(\"https://raw.githubusercontent.com/Ahmad20/AssociateDataScience2021/main/Tab.csv\")"
       ],
-      "execution_count": 49,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -745,12 +758,12 @@
           "height": 202
         },
         "id": "yGOCEcMRbBOH",
-        "outputId": "bd4894a3-a9a7-40a6-bdd2-f4728d35bfb6"
+        "outputId": "79ea330c-c864-4fbe-e863-2a3ca6a62df2"
       },
       "source": [
         "Tab"
       ],
-      "execution_count": 50,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -836,7 +849,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 110
         }
       ]
     },
@@ -847,12 +860,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vtjau7eSbBOI",
-        "outputId": "74ca7553-966f-4289-a8f9-57469316f3bc"
+        "outputId": "30f3b838-56c3-485e-a6f4-2054fdbe0d01"
       },
       "source": [
         "Tab[\"Negara\"]"
       ],
-      "execution_count": 51,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -867,7 +880,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 111
         }
       ]
     },
@@ -878,12 +891,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EaEucLCrbBOI",
-        "outputId": "8e767e67-56ff-4e2f-8df9-9d30f5f937c4"
+        "outputId": "6057696c-843a-472d-d13f-2bfb4016edd1"
       },
       "source": [
         "Tab.Ibukota"
       ],
-      "execution_count": 52,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -898,7 +911,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 112
         }
       ]
     },
@@ -925,7 +938,7 @@
       "source": [
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 53,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -936,7 +949,7 @@
       "source": [
         "year = [1980, 1990, 2000, 2010, 2020]"
       ],
-      "execution_count": 54,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -947,7 +960,7 @@
       "source": [
         "price = [2.5, 7.6, 9.7, 15.8, 22.9]"
       ],
-      "execution_count": 55,
+      "execution_count": 115,
       "outputs": []
     },
     {
@@ -958,13 +971,13 @@
           "height": 264
         },
         "id": "RmGD6BzFbBOP",
-        "outputId": "6d09e422-9e8e-419a-ca2f-5c29b3039500"
+        "outputId": "c5c6c626-3981-4c3a-ea79-62ce3f5ba0fd"
       },
       "source": [
         "plt.plot(year, price)\n",
         "plt.show()"
       ],
-      "execution_count": 56,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "display_data",
@@ -988,22 +1001,22 @@
           "height": 282
         },
         "id": "6CiHVA7vbBOQ",
-        "outputId": "6e492beb-2c08-4f0b-ae22-2bcddf4ac78e"
+        "outputId": "28c3da8a-c31f-4317-d918-d20e4e1f719c"
       },
       "source": [
         "plt.scatter(year,price)"
       ],
-      "execution_count": 57,
+      "execution_count": 117,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7fcca2a67a50>"
+              "<matplotlib.collections.PathCollection at 0x7fcca1e15110>"
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 117
         },
         {
           "output_type": "display_data",
@@ -1027,12 +1040,12 @@
           "height": 282
         },
         "id": "JANlfL3PbBOR",
-        "outputId": "ef95ce63-7fb1-4424-8cfb-985b67ac0a28"
+        "outputId": "c36c1061-f3d6-4fa3-9482-bfb6a0975394"
       },
       "source": [
         "plt.bar(year,price)"
       ],
-      "execution_count": 58,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1042,7 +1055,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 118
         },
         {
           "output_type": "display_data",
